# anki-sea-minerator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
minerator/: cards.py  cli.py  config.py  flow.py  models.py  prompt.py  ui.py
minerator/ai/: base.py  gemini.py
minerator/anki/: client.py
minerator/tts/: base.py  edge.py  gtts_engine.py  player.py
tests/: test_cards.py  test_cli.py  test_config.py  test_flow.py  test_models.py  test_prompt.py  test_smoke.py  test_ui.py
tests/ai/: test_gemini.py
tests/anki/: test_client.py
tests/tts/: test_engines.py  test_player.py
