[project]
name = "anki-sea-minerator"
version = "0.1.0"
description = "Mine English vocabulary into Anki flashcards with AI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "google-genai>=0.3",
    "edge-tts>=6",
    "gTTS>=2.5",
    "httpx>=0.27",
    "platformdirs>=4",
    "tomli-w>=1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
minerator = "minerator.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minerator*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
