[project]
name = "anki-sea-minerator"
version = "0.1.0"
description = "Mine English vocabulary into Anki flashcards with AI"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "google-genai>=0.3",
    "edge-tts>=6",
    "gTTS>=2.5",
    "httpx>=0.27",
    "platformdirs>=4",
    "tomli-w>=1",
    "playsound3>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15", "mypy>=2.0"]

[project.scripts]
minerator = "minerator.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minerator*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["edge_tts.*", "gtts.*", "questionary.*", "playsound3.*"]
ignore_missing_imports = true
